# kiopp-math-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
inc/: kiopp_interface.h  kiopp_math.h
src/: kiopp_interface.c  kiopp_math.c  main.c
